--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "favicons": "^7.1.4",
     "favicons-webpack-plugin": "^6.0.1",
     "jest": "^29.7.0",
+    "process": "^0.11.10",
     "yarn": "^1.22.19"
   }
 }
