--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ahj-courseWork-client",
+  "name": "coursework",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -29,8 +29,6 @@
     "acorn-class-fields": "^1.0.0",
     "babel-loader": "^9.1.3",
     "css-loader": "^6.8.1",
-    "favicons": "^7.1.4",
-    "favicons-webpack-plugin": "^6.0.1",
     "eslint": "^8.45.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-standard": "^17.1.0",
@@ -47,7 +45,6 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
-
     "jest": "^29.7.0",
     "process": "^0.11.10",
     "yarn": "^1.22.19"
